@@ -1,6 +1,7 @@
 TODO:
 
 - macro recorder
+- script merge utility for when new gizmod versions get released
 
 BUGS:
 
